Finish html level one

--- a/html_level_one/basics.html
+++ b/html_level_one/basics.html
@@ -18,5 +18,12 @@
             <li>Unordered two</li>
         </ul>
     </ol>
+    <!-- Link for text -->
+    <a href="new_page.html">Go to New Page</a>
+    <h1>Attributes</h1>
+    <!-- Link for the picture -->
+    <a href="new_page.html">
+        <img src="Foods_That_Make_You_Sleepy.jpg" alt="Food that make you sleepy">
+    </a>
 </body>
 </html>
