--- a/javascript_level_two/basics.html
+++ b/javascript_level_two/basics.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset='utf-8'>
     <title>Basic</title>
-    <script src='func_exe.js'></script>
+    <script src='arr_exe.js'></script>
 </head>
 <body>
     
